Bug 124386 - Don't show all symbols
Summary: Don't show all symbols
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.7.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-28 10:23 UTC by Luis
Modified: 2019-04-02 12:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
image capture (11.87 KB, image/png)
2019-03-28 10:24 UTC, Luis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luis 2019-03-28 10:23:13 UTC
Description:
LibreOffice Math
In the windows to select symbols, can't see de symbols on the last line

Steps to Reproduce:
1.Open LibreOffice Math
2.Click on symbols button
3.Select "Griego" symbols
4.The symbols on the last line is not showing

Actual Results:
is easy to understand with the explanations above

Expected Results:
see all the symbols on the window


Reproducible: Always


User Profile Reset: No



Additional Info:
show symbols
Comment 1 Luis 2019-03-28 10:24:47 UTC
Created attachment 150346 [details]
image capture
Comment 2 Xisco Faulí 2019-03-28 17:54:22 UTC
Win only.
I can reproduce it in

Versión: 6.2.2.2
Id. de compilación: 2b840030fec2aae0fd2658d8d4f9548af4e3518d
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded

but not in

Version: 6.3.0.0.alpha0+
Build ID: e74de110d16c95414fac7541c8fe6541d4597113
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

On win, the scroll doesn't work....
Comment 3 Xisco Faulí 2019-03-28 17:55:03 UTC
mmm, the scroll works if the dialog is resized...
Comment 4 Xisco Faulí 2019-03-28 17:59:21 UTC
Also reproduced in

Versión: 5.3.7.2
Id. de compilación: 6b8ed514a9f8b44d37a1b96673cbbdd077e24059
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; Motor de trazado: HarfBuzz; 
Configuración regional: es-ES (es_ES); Calc: group

@Caolán, any idea why the scrollbar doesn't work on Win unless the dialog is resized ?
Comment 5 Julien Nabet 2019-03-29 10:46:30 UTC
Just for the record, on Win10 with master sources updated today, I can scroll the dialog to see all lines without resizing.
Comment 6 Luis 2019-03-29 11:14:28 UTC
Thank You all.
Comment 7 Caolán McNamara 2019-03-29 12:54:34 UTC
I can't reproduce this under Linux, but it is a bit weird to calculate and set the scroll region during the actual draw process and trigger a redraw at that point. Its possible that making this more "standard" would help
Comment 8 Caolán McNamara 2019-03-29 19:23:39 UTC
The commit of...

Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/fdeada8c50c3e9126537ceafc649c85dc4be598c%5E%21

tdf#124410 re-call SetScrollBarRange when aSymbolSet changes

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.

should have been for this bug. Testing appreciated if it make a difference, if it does I can backport it
Comment 9 Caolán McNamara 2019-04-01 10:54:19 UTC
I little speculative, but I thing that should fix it
Comment 10 Xisco Faulí 2019-04-01 11:09:14 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: d31d77b7199ecc9a7edc899d9703e9da52d5cbd1
CPU threads: 1; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-04-01_00:04:09
Locale: es-ES (es_ES); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!

Cherry-picked to 6-2 -> https://gerrit.libreoffice.org/#/c/70050/
Comment 11 Commit Notification 2019-04-02 07:59:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/b183687274f12a21837f2d5d4e1280017e8e44ef%5E%21

tdf#124386 re-call SetScrollBarRange when aSymbolSet changes

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Luis 2019-04-02 12:07:20 UTC
Perfect, now it is working well. Version 6.2.4

Thank you a lot