tdf#124386 re-call SetScrollBarRange when aSymbolSet changes

and do the work that depends on size happen at size-changed
instead of first-draw

Change-Id: Ia2605ba9bb875be9248a009a6f26f01cbbbd4632
Reviewed-on: https://gerrit.libreoffice.org/69928
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit fdeada8c50c3e9126537ceafc649c85dc4be598c)
Reviewed-on: https://gerrit.libreoffice.org/70050